log
Wed 27 Mar 2024 08:32:49 PM UTC: 
 tests:  0|6
total_score: 0/70
26b6425
Wed 27 Mar 2024 08:42:00 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cab8002
Wed 27 Mar 2024 08:49:40 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
b341869
Wed 27 Mar 2024 08:50:20 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4b28de4
Wed 27 Mar 2024 08:50:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
10a9e88
Wed 27 Mar 2024 08:53:12 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d595db1
Wed 27 Mar 2024 08:53:53 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 15/70
803d0b4
Wed 27 Mar 2024 08:56:01 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 25/70
eb8a9a8
Wed 27 Mar 2024 09:02:28 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
2918f6e
Wed 27 Mar 2024 09:03:11 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|4
total_score: 25/70
0cee47c
Wed 27 Mar 2024 09:07:42 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
0370269
Wed 27 Mar 2024 09:08:29 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
25aae8a
Wed 27 Mar 2024 09:12:20 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:62:17: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   62 |     return list -> prev -> data;
      |                 ^~
list.c:63:1: error: control reaches end of non-void function [-Werror=return-type]
   63 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d3b9a58
Wed 27 Mar 2024 09:13:00 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
24372fd
Wed 27 Mar 2024 09:24:13 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  9|3
total_score: 35/70
a629192
Sun 31 Mar 2024 03:02:12 AM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:70:3: error: this ‘else’ clause does not guard... [-Werror=misleading-indentation]
   70 |   else
      |   ^~~~
list.c:72:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘else’
   72 |     nodonuevo -> next = list -> head;
      |     ^~~~~~~~~
list.c:76:10: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   76 |     list -> size++;
      |          ^~
cc1: all warnings being treated as errors
Compilation failed
a418b98
